[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/", "listings.py"]

[project]
name = "apt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "beautifulsoup4==4.14.3",
    "httpx==0.28.1",
    "polars==1.39.3",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "streamlit==1.56.0",
]
